#4165 - Fix for footer container width overflowing parent container, UI tweak

--- a/public/admin/assets/css/frontend-admin.css
+++ b/public/admin/assets/css/frontend-admin.css
@@ -3246,6 +3246,9 @@
     color: #7f8c8d;
     text-decoration: none;
   }
+  #componentloader .footer-after .container {
+    max-width: 100%;
+  }
   #componentloader .footer-logo {
     margin: -35px 5px 0 0;
     float: right;
