--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3250,6 +3250,9 @@ div[data-type="feature-block"] .component-inner {
     color: #7f8c8d;
     text-decoration: none;
   }
+  .footer-after .container {
+    max-width: 100%;
+  }
   .footer-logo {
     margin: -35px 5px 0 0;
     float: right;
