--- a/public/less/frontend/components/footer-v1.less
+++ b/public/less/frontend/components/footer-v1.less
@@ -32,6 +32,9 @@
   text-decoration: none;
   }
 
+  .footer-after .container {
+    max-width: 100%;
+  }
 
   .footer-logo {
     margin: -35px 5px 0 0;
